@@ -1,47 +1,42 @@
 package com.example;
 
+import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
 
-import java.util.Arrays;
+import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
 
 class FelineTest {
 
-    @Mock
     private Feline feline;
 
     @BeforeEach
     void setUp() {
-        feline = mock(Feline.class);
+        feline = new Feline();
     }
 
     @Test
     void getFoodReturnsCorrectList() throws Exception {
-        when(feline.getFood("Хищник"))
-                .thenReturn(Arrays.asList("Животные", "Птицы", "Рыба"));
-        assertEquals(Arrays.asList("Животные", "Птицы", "Рыба"), feline.getFood("Хищник"));
+        List<String> expectedFoodList = List.of("Животные", "Птицы", "Рыба");
+        assertEquals(expectedFoodList, feline.eatMeat());
     }
 
     @Test
     void getFamilyReturnsCorrectValue() {
-        when(feline.getFamily()).thenReturn("Кошачьи");
-        assertEquals("Кошачьи", feline.getFamily());
+        String expectedFamily = "Кошачьи";
+        assertEquals(expectedFamily, feline.getFamily());
     }
 
     @Test
-    void eatMeatReturnsMeatList() throws Exception {
-        when(feline.eatMeat())
-                .thenReturn(Arrays.asList("Животные", "Птицы", "Рыба"));
-        assertEquals(3, feline.eatMeat().size());
+    void getCorrectSizeOfMeatList() throws Exception {
+        int expectedSizeOfList = 3;
+        assertEquals(expectedSizeOfList, feline.eatMeat().size());
     }
 
     @Test
     void getKittensReturnsOne() {
-        when(feline.getKittens()).thenReturn(1);
-        assertEquals(1, feline.getKittens());
+        int expectedNumberOfKittens = 1;
+        assertEquals(expectedNumberOfKittens, feline.getKittens());
     }
 }
